--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.734.0",
     "@aws-sdk/lib-storage": "^3.734.0",
+    "@aws-sdk/s3-request-presigner": "^3.735.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
