created volunteer apis

--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "@aws-sdk/s3-request-presigner": "^3.735.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.9.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
